--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           cp -r anomaly-dependencies/trader_autoinject/gamedata .
           cp -r anomaly-dependencies/workshop_autoinject/gamedata . 
+          cp -r anomaly-dependencies/encyclopedia/gamedata . 
           cp -r anomaly-dependencies/speed/gamedata . 
 
       - name: Get current date
